# setup

./: .envrc  .gitignore  .pre-commit-config.yaml  README.md  migrate  pyproject.toml  reset  setup  setup.sh  tasks.py
.github/workflows/: test.yml
Atom/: config.cson  keymap.cson.windows  keymaps.cson.mac  package-list.txt  setup.sh
Terminal/: .bash  .gitignore  .zshrc  README.md  bash_settings  eva01.itermcolors  purple  setup  setup.sh  starship.toml
Terminal/.zsh/: 00-misc.zsh  01-alias.zsh  aliases.zsh  base.zsh
Updates/: setup
VSCode/: keybindings.json.mac  keybindings.json.windows  settings.json  setup  setup.sh  test.sh
ai/: tools.json
ai/memory/: base.md  project-notes-workflow.md  python.md
ai/modules/ccstatusline/: settings.json
ai/modules/claude/: CLAUDE.md  settings.template.json  statusline.sh
ai/templates/: backend-review.md  frontend-review.md  pr-description.md
direnv/: .envrc.uv.example  README.md  direnvrc  setup
git/: .gitconfig.shared  .gitignore_global  README.md  setup
help/: Custom.terminal
lazygit/: README.md  setup
lib/: platform.sh
rectangle/: RectangleConfig.json  com.knollsoft.Rectangle.plist  setup
scripts/: bootstrap  reset  setup  setup.py
shell/: .zprofile  .zshrc  .zshrc.loader  .zshrc.local.example  README.md  setup
shell/.zsh/: aliases.zsh  base.zsh  shellperf.zsh
terminal/: Custom.json  README.md  setup
terminal/ghostty/: config
terminal/iterm2/: Custom.json
tests/: conftest.py  test_components.py  test_memory.py  test_setup.py  test_skills.py  test_tasks.py  test_tools_config.py
(+11 files in other folders)
