[project]
name = "setup"
version = "0.1.0"
description = "Development environment and AI CLI tools configuration"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
setup = "scripts.setup:main"

[dependency-groups]
dev = [
    "invoke>=2.2",
    "mypy>=1.15",
    "pre-commit>=4.0",
    "pytest>=8.0",
    "ruff>=0.14",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scripts"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
default = true
